# finderskeepers-v2

./: .claudeignore  .env.example  .gitignore  .mcp.json  .mcp.json.back  .mcp.json.disabled  .yamllint.yml  AI_GOD_MODE_TIMEZONE_FIX.md  Agent Action Tracker.json  Agent Action Tracker.json.old  Agent Session Logger Actually Corrected.json  Agent Session Logger.json  BACKGROUND_PROCESSING.md  BITCAIN_IMPLEMENTATION_ROADMAP.md  BYPASS_N8N_SUMMARY.md  CLAUDE.md  CONTAINER_FIX_README.md  CONVERSATION_CAPTURE_FIX.md  CURRENT_STATUS.md  DATABASE_SCHEMA_ANALYSIS.md  DEPLOYMENT.md  DIAGNOSTIC_REPORT.md  DOCUMENTATION_INGESTION_GUIDE.md  FINDERSKEEPERS_V2_SYSTEM_UPDATES.md  IMPLEMENTATION_SUMMARY.md  MCP-INSTALL-COMMANDS-CLAUDE-CODE.md  MCP_INSTALL_COMMAND.md  MCP_SETUP_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  SESSION_COMPLETE_STATUS.md  SESSION_CONTINUITY_ACTION_PLAN.md  SESSION_CONTINUITY_MASTER_PLAN.md  SYSTEM_MONITORING_PERFORMANCE_FIX.md  SYSTEM_STATUS.md  SYSTEM_STATUS_SNAPSHOT.md  TESTING_REPORT.md  UPLOAD-STATUS-FIX-SUMMARY.md  VOLUME_MOUNT_ADDED.md  (+59 more)
.claude/: ROADMAP.md  gui-framework-research.md  mcp-wrapper.sh  n8n_api_key  settings.local.json.backup  settings.local.json.disabled
.github/: copilot-instructions.md
.serena/: project.yml
.venv_test/: pyvenv.cfg
docs/: FK2_RETENTION.md  HOST_ENVIRONMENT.md  SESSION_CONTINUITY_SYSTEM.md  SESSION_LOGGING_ISSUES.md  SESSION_QUICK_REFERENCE.md  knowledge-ingestion-architecture.md  n8n-guide.md  n8n-working-patterns.md
fk2_frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
n8n-workflows/: Agent Action Tracker.json  Agent Session Logger.json  FK2 - Auto Entity Extraction-07-31-2025.json  FK2-MCP Agent Action Tracker-07-31-2025.json  FK2-MCP Enhanced Agent Session Logger-07-31-2025.json  auto-entity-extraction.json
services/diary-api/: .dockerignore  AUTOMATIC_PROCESSING_FIX.md  Dockerfile  README.md  README_AUTOMATIC_PROCESSING.md  bulletproof_session_logger.py  cleanup_duplicates.py  crash_recovery_system.py  docker-entrypoint.sh  fix_automatic_pipeline.py  fix_automatic_processing.py  main.py  migrate_historical_sessions.py  pyproject.toml  quick_storage_fix.py  requirements.txt  safe_knowledge_completion.py  test_automatic_processing.py  test_ingestion.py
services/diary-api/app/: __init__.py
services/diary-api/app/api/: __init__.py  admin.py  background_admin.py  chat.py  chat_complete.py  chat_completion.py  chat_endpoints.py  chat_endpoints_final.py  knowledge.py  mcp.py
services/diary-api/app/api/v1/: __init__.py  entity_extraction.py
services/diary-api/app/api/v1/diary/: __init__.py  endpoints.py
services/diary-api/app/api/v1/ingestion/: __init__.py  endpoints.py  format_detector.py  models.py  processors.py  services.py  storage.py
services/diary-api/app/core/: __init__.py  automatic_processing.py  background_scheduler.py  enhanced_ingestion.py
services/diary-api/app/database/: __init__.py  connection.py  queries.py
services/diary-api/app/monitoring/: __init__.py  system_stats.py
services/diary-api/app/services/: redis_vector_cache.py
services/mcp-knowledge-server/: .env.template  CLAUDE_INTEGRATION.md  README.md  install.sh  pyproject.toml  requirements.txt  start-server.sh  test_activity_logging.py  test_server.py
services/mcp-knowledge-server/src/: __init__.py  activity_logger.py  conversation_logging_middleware.py  conversation_monitor.py  knowledge_server.py
services/mcp-knowledge-server/src/database/: __init__.py  neo4j_client.py  postgres_client.py  qdrant_client.py  redis_client.py
services/mcp-session-server/: .env.docker  =2.9.0  README.md  database_schema.sql  pyproject.toml  requirements.txt  test_mcp_server.py  test_middleware.py  test_minimal_mcp.py  verify_server.py
services/mcp-session-server/src/: __init__.py  fk2_mcp_server.py  fk2_mcp_server_fixed.py
(+176 files in other folders)
