[project]
name = "finderskeepers-mcp-knowledge-server"
version = "0.1.0"
description = "MCP Server for FindersKeepers v2 Knowledge Base Access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # MCP Framework
    "mcp>=1.0.0",
    "fastmcp>=0.5.0",
    
    # Database Clients
    "asyncpg>=0.29.0",          # PostgreSQL async driver
    "neo4j>=5.15.0",            # Neo4j graph database
    "redis>=5.0.1",             # Redis caching
    "qdrant-client>=1.7.0",     # Qdrant vector database
    
    # HTTP Client
    "httpx>=0.26.0",            # For FastAPI communication
    
    # Utilities
    "pydantic>=2.5.0",          # Data validation
    "python-dotenv>=1.0.0",     # Environment variables
    "structlog>=23.2.0",        # Structured logging
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88