[project]
name = "finderskeepers-mcp"
version = "2.0.0"
description = "FindersKeepers v2 MCP Session Continuity Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.6",
    "asyncpg>=0.29.0", 
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
